--- a/Aplicacion Desktop/ClinicaFrba/ClinicaFrba/Abm Afiliado/frmHistorialModificaciones.resx
+++ b/Aplicacion Desktop/ClinicaFrba/ClinicaFrba/Abm Afiliado/frmHistorialModificaciones.resx
@@ -132,6 +132,9 @@
   <metadata name="gD2C2016DataSet1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>730, 17</value>
   </metadata>
+  <metadata name="gD2C2016DataSet1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>730, 17</value>
+  </metadata>
   <metadata name="modif_Plan_Get_AllTableAdapter1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 60</value>
   </metadata>
